<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".EnterPinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_pin"
                android:textSize="50sp" />

        </LinearLayout>



    <!-- Other layout elements for entering and confirming PIN -->

    <LinearLayout
        android:id="@+id/editTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:weightSum="4">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:shapeAppearance="@style/RoundedSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customEditText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:gravity="center_vertical|center_horizontal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:shapeAppearance="@style/RoundedSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customEditText2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:gravity="center_vertical|center_horizontal"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:shapeAppearance="@style/RoundedSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customEditText3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:gravity="center_vertical|center_horizontal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:shapeAppearance="@style/RoundedSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customEditText4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:gravity="center_vertical|center_horizontal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContainer"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/btnColor"/>

        <Button
            android:id="@+id/forgetPinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pin"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/btnColor"/>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>